# personal-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yaml  ci.yml  version-bump.yml
app/: main.py
app/models/: schemas.py
app/rag/: loader.py  prompts.py  rag_pipeline.py  settings.py
app/utils/: auth.py
lambda/: list_files.py  upload_file.py
tests/: conftest.py  test_langgraph_rag.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_auth.py
tests/utils/: __init__.py
