[tool.poetry]
name = "luiseduromp-rag"
version = "0.1.0"
description = "A personal RAG (Retrieval-Augmented Generation) application to answer questions about my personal profile"
authors = ["Luis Romero <luiseduromp@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
langchain = "^0.0.300"
langchain-community = "^0.0.20"
langchain-openai = "^0.0.5"
openai = "^0.28.0"
chromadb = "^0.4.0"
pymupdf = "^1.22.0"
pydantic = "^1.10.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.20.0"
black = "^23.0.0"
ruff = "^0.1.0"
pre-commit = "^3.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
ignore = []

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py312"]
